--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,14 +17,14 @@ jobs:
           git add refresh
           git commit -m "update refresh token [skip ci]"
           git push --set-upstream origin
-workflows:
-  walking-tracker-workflow:
-    triggers:
-      - schedule:
-          cron: "0 16 * * *"
-          filters:
-            branches:
-              only:
-                - main
-    jobs:
-      - walking-tracker
+# workflows:
+#   walking-tracker-workflow:
+#     triggers:
+#       - schedule:
+#           cron: "0 16 * * *"
+#           filters:
+#             branches:
+#               only:
+#                 - main
+#     jobs:
+#       - walking-tracker
